--- a/shufl-web/src/index.html
+++ b/shufl-web/src/index.html
@@ -7,6 +7,7 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="manifest" href="manifest.webmanifest">
     <meta name="theme-color" content="#2c3035">
     <meta name="apple-mobile-web-app-title" content="Shufl">
@@ -18,7 +19,7 @@
 
 <body>
     <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
