Fixed bottom nav bar for iOS navigation bar

--- a/shufl-web/src/index.html
+++ b/shufl-web/src/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="assets/icons/icon-180x180.png">
     <link rel="manifest" href="manifest.webmanifest">
     <meta name="description" content="A web app for suggesting random Artists, Albums and Tracks and listening along with your friends">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"/>
     <meta name="theme-color" content="#2c3035">
     <meta name="apple-mobile-web-app-title" content="Shufl">
     <meta name="apple-mobile-web-app-capable" content="yes">
